
if ENABLE_SPECS
if HAVE_XMLTO

# Main DocBook/XML files (DOCTYPE book)
docbook = inputlib.xml

# Included chapters, appendix, images
chapters = library.xml encoding.xml

# The location where the DocBook/XML files and their generated formats are installed
shelfdir = $(docdir)

# Generate DocBook/XML output formats with or without stylesheets
include $(top_srcdir)/docbook.am

endif HAVE_XMLTO
endif ENABLE_SPECS
